--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT = 3000
 MONGOURL = mongodb+srv://hqminh050503:minh050503@cluster0.jc66hin.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SECRET = hqminh050503
+JWT_SECRET = minh050503
+AUTH_EMAIL = horizondev19@gmail.com
+AUTH_PASSWORD = yrjbrhmvkyjdpjpo
